fix table overflow issue and move table-overflow class to global scss

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -24,11 +24,6 @@
     &.journey {
       background-color: $black;
     }
-
-    .table-container {
-      overflow-x: auto;
-      margin-bottom: 0.5rem;
-    }
   }
 }
 
